package decorator;

public interface IBirthdayCake {
    public void show();
}
